--- a/Refactor/Refactor.csproj
+++ b/Refactor/Refactor.csproj
@@ -11,6 +11,7 @@
       <PackageReference Include="LevenshteinDistance" Version="1.0.0" />
       <PackageReference Include="LevenshteinMinimumEditDistance" Version="1.2.0" />
       <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.11.0" />
+      <PackageReference Include="Soenneker.Utils.String.CosineSimilarity" Version="2.1.591" />
     </ItemGroup>
 
 </Project>
